--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,13 +17,13 @@
 ;==========================================================
 
 [colors]
-background = #1d1f21
-background-alt = #373B41
-foreground = #c5c8c6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background=#000f141a
+background_alt=#01231A
+foreground=#a0a0b4
+foreground_alt=#bcb4b9
+highlight=#88374A
+primary = #88374A
+alert = #ddc758
 
 [bar/bar1]
 width = 100%
@@ -49,7 +49,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrains Mono:pixelsize=10;1
+font-0 = Operator Mono:pixelsize=10;1
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio memory cpu wlan eth date
