--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -229,7 +229,7 @@
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -998,7 +998,7 @@ window_padding_width 7
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.98
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
