--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,8 +6,7 @@ monitor=,1920x1080@165,auto,auto
 
 # Execute your favorite apps at launch
 exec-once = waybar &
-exec-once = swaybg -i ~/Pictures/minecraft.png -m fill &
-exec-once = ~/.config/hypr/scripts/fix-desktop-portal.sh
+exec-once = swaybg -i ~/Pictures/Wallpapers/sakura.jpg -m fill &
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -42,18 +41,18 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 7
     border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-    
+
     layout = master
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 3
+    rounding = 0
     blur = yes
     blur_size = 3
     blur_passes = 1
@@ -72,8 +71,8 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier, slide
-    animation = windowsOut, 1, 10, default, slide
+    animation = windows, 1, 7, myBezier, popin 80%
+    animation = windowsOut, 1, 10, default, popin 80%
     animation = border, 1, 7, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
@@ -115,10 +114,10 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, kitty
 bind = $mainMod, Q, killactive, 
-bind = $mainMod SHIFT, E, exit, 
+bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, space, exec, wofi --show drun
+bind = $mainMod, space, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, H, layoutmsg, swapwithmaster master # master
