--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,9 +7,6 @@
 #: characters.
 
  font_family      Iosevka Term Extended
- bold_font        Iosevka Term Bold Extended
- italic_font      Iosevka Term Extended Italic
-# bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +21,9 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
- font_size 11.0
+ font_size 12.0
+
+ adjust_line_height 110%
 
 #: Font size (in pts)
 
@@ -1201,7 +1200,8 @@
 
 #: Relative paths are resolved from the kitty configuration directory.
 
-# allow_remote_control no
+#: allow_remote_control no
+
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
