--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,7 +17,7 @@ fade-in-step = 0.05;
 fade-out-step = 0.05;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 7.5
+# fade-delta = 7.5
 
 # Specify a list of conditions of windows that should not be faded.
 #fade-exclude = ["class_g = 'Rofi'"]
@@ -35,7 +35,7 @@ no-fading-destroyed-argb = false
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1.0;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -67,13 +67,11 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-	#"80:class_g = 'Alacritty'",
-	"80:class_g = 'Thunar'",
 	"80:class_g = 'Rofi'",
 	"70:class_g = 'Dunst'",
 	"90:class_g = 'Spotify'",
-	"75:class_g = 'WeekToDo'",
-	"90:class_g = 'VisualStudioCode'",
+	"95:class_g = 'WeekToDo'",
+	"98:class_g = 'Code'",
 ];
 
 
@@ -155,8 +153,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-#backend = "glx"
-backend = "xrender";
+backend = "glx"
+#backend = "xrender";
 
 # Enable/disable VSync.
 #vsync = false
