--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,10 +1,11 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080@165,auto,auto
+monitor=,1920x1080@60,auto,auto
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
+exec-once = dunst &
 exec-once = waybar &
 exec-once = swaybg -i ~/Pictures/Wallpapers/sakura.jpg -m fill &
 
