--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
-font pango:Iosevk Extended 9
+font pango:Iosevk Extended 10
 
 
 # Start XDG autostart .desktop files using dex. See also
@@ -19,16 +19,17 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec --no-startup-id volumeicon
+
+# Todo App
+exec --no-startup-id weektodo
+exec --no-startup-id kitty "task"
 
 # Picom compositor
 exec_always --no-startup-id picom -b
 
-# Volume icon in tray
-# exec --no-startup-id volumeicon
-
 # Wallpaper
 exec_always --no-startup-id feh --bg-fill ~/Pictures/Wallpapers/sakura.jpg
-exec --no-startup-id volumeicon &!
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -114,16 +115,16 @@ bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+1 move container to workspace number $ws1, workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2, workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3, workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4, workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5, workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6, workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7, workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8, workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9, workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10, workspace number $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -167,6 +168,7 @@ bar {
     status_command i3status --config ~/.config/i3/i3status.conf
 	position top
 	i3bar_command i3bar --transparency
+	padding 2px
 	colors {
         background #1a1b26a1
         statusline #a9b1d6
