--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,71 +1,44 @@
-foreground #a9b1d6
-background #1a1b26
+# vim:ft=kitty
+## name: One Half Dark
+## author: Son A. Pham
+## license: MIT
+## upstream: https://raw.githubusercontent.com/sonph/onehalf/master/kitty/onehalf-dark.conf
+## blurb: Clean, vibrant and pleasing color scheme
 
-# Black
-color0 #414868
-color8 #414868
+foreground            #dcdfe4
+background            #282c34
+selection_foreground  #000000
+selection_background  #FFFACD
+url_color             #0087BD
 
-# Red
-color1 #f7768e
-color9 #f7768e
+# black
+color0   #282c34
+color8   #5d677a
 
-# Green
-color2  #73daca
-color10 #73daca
+# red
+color1   #e06c75
+color9   #e06c75
 
-# Yellow
-color3  #e0af68
-color11 #e0af68
+# green
+color2   #98c379
+color10  #98c379
 
-# Blue
-color4  #7aa2f7
-color12 #7aa2f7
+# yellow
+color3   #e5c07b
+color11  #e5c07b
 
-# Magenta
-color5  #bb9af7
-color13 #bb9af7
+# blue
+color4  #61afef
+color12 #61afef
 
-# Cyan
-color6  #7dcfff
-color14 #7dcfff
+# magenta
+color5   #c678dd
+color13  #c678dd
 
-# White
-color7  #c0caf5
-color15 #c0caf5
+# cyan
+color6   #56b6c2
+color14  #56b6c2
 
-# Cursor
-cursor #c0caf5
-cursor_text_color #1a1b26
-
-# Selection highlight
-selection_foreground none
-selection_background #28344a
-
-# The color for highlighting URLs on mouse-over
-url_color #9ece6a
-
-# Window borders
-active_border_color #3d59a1
-inactive_border_color #101014
-bell_border_color #e0af68
-
-# Tab bar
-tab_bar_style fade
-tab_fade 1
-active_tab_foreground   #3d59a1
-active_tab_background   #16161e
-active_tab_font_style   bold
-inactive_tab_foreground #787c99
-inactive_tab_background #16161e
-inactive_tab_font_style bold
-tab_bar_background #101014
-
-# Title bar
-macos_titlebar_color #16161e
-
-# Storm
-# background #24283b
-# cursor_text_color #24283b
-# active_tab_background   #1f2335
-# inactive_tab_background #1f2335
-# macos_titlebar_color #1f2335
+# white
+color7   #dcdfe4
+color15  #dcdfe4
