--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,25 +1,30 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080@60,auto,auto
+monitor=,1920x1080@165,auto,auto
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = dunst &
-exec-once = waybar &
-exec-once = swaybg -i ~/Pictures/Wallpapers/sakura.jpg -m fill &
+exec-once = dunst 
+exec-once = waybar 
+exec-once = swaybg -i ~/Pictures/wallpaper.png -m fill 
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-#env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
 env = GDK_BACKEND,wayland,x11
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+#env = GBM_BACKEND,nvidia-drm
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+env = WLR_NO_HARDWARE_CURSORS,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -28,6 +33,7 @@ input {
     kb_model =
     kb_options =
     kb_rules =
+    accel_profile = flat
 
     follow_mouse = 1
 
@@ -68,15 +74,11 @@ decoration {
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier, popin 80%
-    animation = windowsOut, 1, 10, default, popin 80%
+    animation = windows, 1, 4, default, popin 80%
+    animation = windowsOut, 1, 5, default, popin 80%
     animation = border, 1, 7, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
+    animation = fade, 1, 5, default
     animation = workspaces, 1, 6, default
 }
 
@@ -113,6 +115,7 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, B, exec, firefox
 bind = $mainMod, return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
