--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      JetBrains Mono Light
+ font_family      JetBrains Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -24,8 +24,8 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
- font_size 12.0
-adjust_line_height 110%
+	 font_size 12.0
+	 adjust_line_height 120%
 #: Font size (in pts)
 
 # force_ltr no
@@ -1066,7 +1066,7 @@ adjust_line_height 110%
 
 #: The foreground and background colors.
 
- # background_opacity 0.9
+  background_opacity 0.98
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
