--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -1,50 +1,46 @@
-# vim:ft=kitty
-## name: Night Owl
-## author: Luke Glazebrook <lukeglazebrook@hey.com>
-## upstream: https://github.com/Glazy/night-owl-kitty-theme/blob/main/night-owl.conf
-## license: MIT
+background #161821
+foreground #c6c8d1
 
-foreground                      #d6deeb
-background                      #011627
-selection_foreground            none
-selection_background            #1d3b53
+selection_background #1e2132
+selection_foreground #c6c8d1
 
+cursor #d2d4de
 
-#: Cursor colors
-cursor                          #80a4c2
-cursor_text_color               background
+# black
+color0 #161821
+color8 #6b7089
 
+# red
+color1 #e27878
+color9 #e98989
 
-#: The basic 16 colors
+# green
+color2 #b4be82
+color10 #c0ca8e
 
-#: black
-color0 #011627
-color8 #575656
+# yellow/orange
+color3 #e2a478
+color11 #e9b189
 
-#: red
-color1 #ef5350
-color9 #ef5350
+# blue
+color4 #84a0c6
+color12 #91acd1
 
-#: green
-color2 #22da6e
-color10 #22da6e
+# magenta/purple
+color5 #a093c7
+color13 #ada0d3
 
-#: yellow
-color3 #addb67
-color11 #ffeb95
+# cyan
+color6 #89b8c2
+color14 #95c4ce
 
-#: blue
-color4 #82aaff
-color12 #82aaff
+# white
+color7 #c6c8d1
+color15 #d2d4de
 
-#: magenta
-color5 #c792ea
-color13 #c792ea
-
-#: cyan
-color6 #21c7a8
-color14 #7fdbca
-
-#: white
-color7  #ffffff
-color15 #ffffff
+# tab bar
+active_tab_foreground   #161821
+active_tab_background   #84a0c6
+inactive_tab_foreground #d2d4de
+inactive_tab_background #353a50
+tab_bar_background      #0f1117
