--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,30 +1,18 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080@60,auto,auto
+monitor=,preferred,auto,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = dunst 
-exec-once = waybar 
-exec-once = swaybg -i ~/Pictures/wallpaper.png -m fill 
+exec-once = waybar & dunst & nm-applet
+exec-once = ~/.azotebg-hyprland
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = GDK_BACKEND,wayland,x11
-
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-#env = GBM_BACKEND,nvidia-drm
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-env = WLR_NO_HARDWARE_CURSORS,1
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -33,7 +21,7 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-    accel_profile = flat
+    # accel_profile = flat
 
     follow_mouse = 1
 
@@ -47,10 +35,10 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 7
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    gaps_in = 3
+    gaps_out = 5
+    border_size = 2
+    col.active_border = rgba(ada0d3ee) rgba(95c4ceee) 45deg
     col.inactive_border = rgba(595959aa)
 
     layout = master
@@ -60,10 +48,13 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 0
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
+    
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+        new_optimizations = true
+    }
 
     drop_shadow = yes
     shadow_range = 4
@@ -74,11 +65,13 @@ decoration {
 animations {
     enabled = yes
 
-    animation = windows, 1, 4, default, popin 80%
-    animation = windowsOut, 1, 5, default, popin 80%
-    animation = border, 1, 7, default
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    animation = windows, 1, 7, default, popin 80%
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 5, default
+    animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
 
@@ -110,13 +103,12 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, B, exec, flatpak run org.mozilla.firefox 
-bind = $mainMod, return, exec, kitty
+bind = $mainMod, return, exec, foot
+bind = $mainMod, L, exec, swaylock -i .lockscreen
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod, E, exec, thunar
@@ -164,3 +156,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
