--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -24,7 +24,8 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-    font_size 13.0
+    font_size 12.0
+    modify_font cell_height 150%
 
 #: Font size (in pts)
 
@@ -913,7 +914,7 @@ text_composition_strategy platform
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+  tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1066,7 +1067,7 @@ text_composition_strategy platform
 
 #: The foreground and background colors.
 
-# background_opacity 0.7
+background_opacity 0.96
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
