--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,12 +1,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+ monitor=,highrr,auto,auto
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-# Execute your favorite apps at launch
-exec-once = waybar & dunst & nm-applet
-exec-once = ~/.azotebg-hyprland
+# Execute your favorite apps at launch 
+ exec-once = waybar && dunst && nm-applet
+ exec-once = ~/.azotebg-hyprland
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -21,7 +21,7 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-    # accel_profile = flat
+    accel_profile = flat
 
     follow_mouse = 1
 
@@ -35,11 +35,11 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 3
-    gaps_out = 5
+    gaps_in = 4
+    gaps_out = 4
     border_size = 2
-    col.active_border = rgba(ada0d3ee) rgba(95c4ceee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgb(a093c7) rgb(84a0c6) 45deg
+    col.inactive_border = rgb(161821)
 
     layout = master
 }
@@ -53,7 +53,6 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-        new_optimizations = true
     }
 
     drop_shadow = yes
@@ -67,12 +66,13 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    animation = windows, 1, 6, default, popin 80%
-    animation = windowsOut, 1, 6, default, popin 80%
+    animation = windows, 1, 7, default, slide
+    animation = windowsOut, 1, 7, default, popin 10%
+    animation = windowsMove, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 6, default
-    animation = workspaces, 1, 5, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default, slide
 }
 
 dwindle {
@@ -103,27 +103,33 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-bind = $mainMod, B, exec, flatpak run org.mozilla.firefox 
+# App hotkeys
 bind = $mainMod, return, exec, foot
-bind = $mainMod, L, exec, swaylock -i .lockscreen
-bind = $mainMod, Q, killactive, 
-bind = $mainMod SHIFT, Q, exit, 
-bind = $mainMod, E, exec, thunar
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, B, exec, flatpak run org.mozilla.firefox
 bind = $mainMod, space, exec, rofi -show drun
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, H, layoutmsg, swapwithmaster master # master
-bind = $mainMod, F, fullscreen
+bind = $mainMod, tab, exec, rofi -show window
+
+bind = $mainMod, E, exec, dolphin
+
+# window controls
+bind = $mainMod, Q, killactive
+bind = $mainMod SHIFT, Q, exit
+bind = $mainMod SHIFT, space, layoutmsg, swapwithmaster master
+bind = $mainMod, V, togglefloating
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -156,4 +162,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
