--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -47,8 +47,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 4
-    gaps_out = 8
+    gaps_in = 2
+    gaps_out = 4
     border_size = 1
     col.active_border = rgb(1db954)
     col.inactive_border = rgba(595959aa)
@@ -60,33 +60,56 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 4
+  rounding = 2
 
-    blur {
-        enabled = true
-        size = 8
-        passes = 1
-        
-        vibrancy = 0.1696
-    }
+    # blur {
+    #   enabled = true
+    #     special = true
+    #     popups = true
+    #     ignore_opacity = false
+    #     xray = false
+    #     size = 8
+    #     # special = true
+    #     passes = 3
+    #     contrast = 1.2
+    #     brightness = 0.8
+    #     vibrancy = 1
+    #     noise = 0.02
+    # }
 
     drop_shadow = true
-    shadow_range = 4
+    shadow_range = 40
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled = true
+  enabled = true
 
-    animation = windows, 1, 4, default, popin
-    animation = windowsOut, 1, 4, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 4, default
+    bezier = fluent_decel, 0, 0.2, 0.4, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutCubic, 0.33, 1, 0.68, 1
+    bezier = easeinoutsine, 0.37, 0, 0.63, 1
+
+# Windows
+    animation = windowsIn, 1, 3, easeOutCubic, slide # window open
+    animation = windowsOut, 1, 3, easeOutCubic, slide # window close.
+
+    animation = windowsMove, 1, 2.5, easeinoutsine, slide # everything in between, moving, dragging, resizing.
+
+# Fading
+    animation = fadeIn, 1, 3, easeOutCubic  # fade in (open) -> layers and windows
+    animation = fadeOut, 1, 3, easeOutCubic # fade out (close) -> layers and windows
+    animation = fadeSwitch, 1, 5, easeOutCirc # fade on changing activewindow and its opacity
+    animation = fadeShadow, 1, 5, easeOutCirc # fade on changing activewindow for shadows
+    animation = fadeDim, 1, 6, fluent_decel # the easing of the dimming of inactive windows
+    animation = border, 1, 2.7, easeOutCirc # for animating the border's color switch speed
+
+# Workspaces
+    animation = workspaces, 1, 5, fluent_decel, slide # styles: slide, slidevert, fade, slidefade, slidefadevert
+    animation = specialWorkspace, 1, 3, fluent_decel, slidevert
 }
 
 dwindle {
