--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -6,14 +6,14 @@
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
 # title=foot
- locked-title=no
+# locked-title=no
 
- font=CommitMono:size=12
-# font-bold=JetBrains Mono Bold
-# font-italic=JetBrains Mono Italic
-# font-bold-italic=JetBrains Mono Bold Italic
+ font=JetBrains Mono:size=12
+# font-bold=<bold variant of regular font>
+# font-italic=<italic variant of regular font>
+# font-bold-italic=<bold+italic variant of regular font>
 # font-size-adjustment=0.5
- line-height=20
+ line-height=18
 # letter-spacing=0
 # horizontal-letter-offset=0
 # vertical-letter-offset=0
@@ -25,7 +25,7 @@
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
- pad=7x7                             # optionally append 'center'
+ pad=8x8                             # optionally append 'center'
 # resize-delay-ms=100
 
 # notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
@@ -43,6 +43,7 @@
 [bell]
 # urgent=no
 # notify=no
+# visual=no
 # command=
 # command-focused=no
 
@@ -61,7 +62,7 @@
 
 [cursor]
  style=beam
-# color=33374c c6c8d1 
+# color=<inverse foreground/background>
  blink=yes
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -73,59 +74,32 @@
 [touch]
 # long-press-delay=400
 
-[colors]
-# Iceberg dark
- alpha=0.98
- background=121212
- foreground=f5f5f5
+# [colors]
+# alpha=0.98
+# background=121212
+# foreground=f5f5f5
+# flash=7f7f00
+# flash-alpha=0.5
 
 ## Normal/regular colors (color palette 0-7)
- regular0=1e2132  # black
- regular1=e27878  # red
- regular2=b4be82  # green
- regular3=e2a478  # yellow
- regular4=84a0c6  # blue
- regular5=a093c7  # magenta
- regular6=89b8c2  # cyan
- regular7=c6c8d1  # white
+ # regular0=1e2132  # black
+ # regular1=e27878  # red
+ # regular2=b4be82  # green
+ # regular3=e2a478  # yellow
+ # regular4=84a0c6  # blue
+ # regular5=a093c7  # magenta
+ # regular6=89b8c2  # cyan
+ # regular7=c6c8d1  # white
 
 ## Bright colors (color palette 8-15)
- bright0=6b7089   # bright black
- bright1=e98989   # bright red
- bright2=c0ca8e   # bright green
- bright3=e9b189   # bright yellow
- bright4=91acd1   # bright blue
- bright5=ada0d3   # bright magenta
- bright6=95c4ce   # bright cyan
- bright7=d2d4de   # bright white
-
-
-# Iceberg light
-# alpha=1.0
-# background=e8e9ec
-# foreground=33374c
-
-## Normal/regular colors (color palette 0-7)
-# regular0=dcdfe7  # black
-# regular1=cc517a  # red
-# regular2=668e3d  # green
-# regular3=c57339  # yellow
-# regular4=2d539e  # blue
-# regular5=7759b4  # magenta
-# regular6=3f83a6  # cyan
-# regular7=33374c  # white
-
-## Bright colors (color palette 8-15)
-# bright0=8389a3   # bright black
-# bright1=cc3768   # bright red
-# bright2=598030   # bright green
-# bright3=b6662d   # bright yellow
-# bright4=22478e   # bright blue
-# bright5=6845ad   # bright magenta
-# bright6=327698   # bright cyan
-# bright7=262a3f   # bright white
-
-
+ # bright0=6b7089   # bright black
+ # bright1=e98989   # bright red
+ # bright2=c0ca8e   # bright green
+ # bright3=e9b189   # bright yellow
+ # bright4=91acd1   # bright blue
+ # bright5=ada0d3   # bright magenta
+ # bright6=95c4ce   # bright cyan
+ # bright7=d2d4de   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
@@ -145,6 +119,62 @@
 # search-box-no-match=<regular0> <regular1>  # black-on-red
 # search-box-match=<regular0> <regular3>     # black-on-yellow
 # urls=<regular3>
+
+# Iceberg dark
+
+# [colors]
+# alpha=0.98
+# background=161821
+# foreground=c6c8d1
+#
+# selection-foreground=1e2132
+# selection-background=c6c8d1
+# ## Normal/regular colors (color palette 0-7)
+# regular0=161821  # black
+# regular1=e27878  # red
+# regular2=b4be82  # green
+# regular3=e2a478  # yellow
+# regular4=84a0c6  # blue
+# regular5=a093c7  # magenta
+# regular6=89b8c2  # cyan
+# regular7=c6c8d1  # white
+# ## Bright colors (color palette 8-15)
+# bright0=6b7089   # bright black
+# bright1=e98989   # bright red
+# bright2=c0ca8e   # bright green
+# bright3=e9b189   # bright yellow
+# bright4=91acd1   # bright blue
+# bright5=ada0d3   # bright magenta
+# bright6=95c4ce   # bright cyan
+# bright7=d2d4de   # bright white
+
+# theme: Nord
+# author: Arctic Ice Studio <development@arcticicestudio.com>, Sven Greb <code@svengreb.de>
+# description: „Nord“ — An arctic, north-bluish color palette
+#
+# this specific foot theme is based on nord-alacritty:
+# https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml
+
+[colors]
+alpha=0.97
+foreground=f5f5f5 # Text
+background=121212 # Base
+regular0=51576d   # Surface 1
+regular1=e78284   # red
+regular2=a6d189   # green
+regular3=e5c890   # yellow
+regular4=8caaee   # blue
+regular5=f4b8e4   # pink
+regular6=81c8be   # teal
+regular7=b5bfe2   # Subtext 1
+bright0=626880    # Surface 2
+bright1=e78284    # red
+bright2=a6d189    # green
+bright3=e5c890    # yellow
+bright4=8caaee    # blue
+bright5=f4b8e4    # pink
+bright6=81c8be    # teal
+bright7=a5adce    # Subtext 0
 
 [csd]
 # preferred=server
@@ -168,6 +198,8 @@
 # scrollback-down-page=Shift+Page_Down
 # scrollback-down-half-page=none
 # scrollback-down-line=none
+# scrollback-home=none
+# scrollback-end=none
 # clipboard-copy=Control+Shift+c XF86Copy
 # clipboard-paste=Control+Shift+v XF86Paste
 # primary-paste=Shift+Insert
@@ -205,11 +237,25 @@
 # delete-prev-word=Mod1+BackSpace Control+BackSpace
 # delete-next=Delete
 # delete-next-word=Mod1+d Control+Delete
-# extend-to-word-boundary=Control+w
+# extend-char=Shift+Right
+# extend-to-word-boundary=Control+w Control+Shift+Right
 # extend-to-next-whitespace=Control+Shift+w
+# extend-line-down=Shift+Down
+# extend-backward-char=Shift+Left
+# extend-backward-to-word-boundary=Control+Shift+Left
+# extend-backward-to-next-whitespace=none
+# extend-line-up=Shift+Up
 # clipboard-paste=Control+v Control+Shift+v Control+y XF86Paste
 # primary-paste=Shift+Insert
 # unicode-input=none
+# scrollback-up-page=Shift+Page_Up
+# scrollback-up-half-page=none
+# scrollback-up-line=none
+# scrollback-down-page=Shift+Page_Down
+# scrollback-down-half-page=none
+# scrollback-down-line=none
+# scrollback-home=none
+# scrollback-end=none
 
 [url-bindings]
 # cancel=Control+g Control+c Control+d Escape
@@ -219,6 +265,8 @@
 # \x03=Mod4+c  # Map Super+c -> Ctrl+c
 
 [mouse-bindings]
+# scrollback-up-mouse=BTN_BACK
+# scrollback-down-mouse=BTN_FORWARD
 # selection-override-modifiers=Shift
 # primary-paste=BTN_MIDDLE
 # select-begin=BTN_LEFT
@@ -227,6 +275,7 @@
 # select-extend-character-wise=Control+BTN_RIGHT
 # select-word=BTN_LEFT-2
 # select-word-whitespace=Control+BTN_LEFT-2
-# select-row=BTN_LEFT-3
+# select-quote = BTN_LEFT-3
+# select-row=BTN_LEFT-4
 
 # vim: ft=dosini
