--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -1,46 +1,80 @@
-background #121212
-foreground #f5f5f5
+# vim:ft=kitty
 
-selection_background #1e2132
-selection_foreground #c6c8d1
+## name:     Catppuccin-Frappe
+## author:   Pocco81 (https://github.com/Pocco81)
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/frappe.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-cursor #d2d4de
+
+
+# The basic colors
+foreground              #F5F5F5
+background              #121212
+selection_foreground    #303446
+selection_background    #F2D5CF
+
+# Cursor colors
+cursor                  #F2D5CF
+cursor_text_color       #303446
+
+# URL underline color when hovering with mouse
+url_color               #F2D5CF
+
+# Kitty window border colors
+active_border_color     #BABBF1
+inactive_border_color   #737994
+bell_border_color       #E5C890
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #232634
+active_tab_background   #CA9EE6
+inactive_tab_foreground #C6D0F5
+inactive_tab_background #292C3C
+tab_bar_background      #232634
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #303446
+mark1_background #BABBF1
+mark2_foreground #303446
+mark2_background #CA9EE6
+mark3_foreground #303446
+mark3_background #85C1DC
+
+# The 16 terminal colors
 
 # black
-color0 #161821
-color8 #6b7089
+color0 #51576D
+color8 #626880
 
 # red
-color1 #e27878
-color9 #e98989
+color1 #E78284
+color9 #E78284
 
 # green
-color2 #b4be82
-color10 #c0ca8e
+color2  #A6D189
+color10 #A6D189
 
-# yellow/orange
-color3 #e2a478
-color11 #e9b189
+# yellow
+color3  #E5C890
+color11 #E5C890
 
 # blue
-color4 #84a0c6
-color12 #91acd1
+color4  #8CAAEE
+color12 #8CAAEE
 
-# magenta/purple
-color5 #a093c7
-color13 #ada0d3
+# magenta
+color5  #F4B8E4
+color13 #F4B8E4
 
 # cyan
-color6 #89b8c2
-color14 #95c4ce
+color6  #81C8BE
+color14 #81C8BE
 
 # white
-color7 #c6c8d1
-color15 #d2d4de
-
-# tab bar
-active_tab_foreground   #161821
-active_tab_background   #84a0c6
-inactive_tab_foreground #d2d4de
-inactive_tab_background #353a50
-tab_bar_background      #0f1117
+color7  #B5BFE2
+color15 #A5ADCE
