--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,6 @@
 theme=terafox
-adjust-cell-height=8
-gtk-titlebar=false
-adjust-underline-position=2
-window-padding-x=4
+adjust-cell-height=18
+window-padding-x=7
+window-padding-y=4
 font-family=JetBrains Mono
-font-family=13
+font-size=13
